@@ -1,5 +1,10 @@
 2008-01-09  Ulrich Drepper  <drepper@redhat.com>
 
+	[BZ #5541]
+	* sunrpc/rpc_thread.c (__rpc_thread_destroy): Also free xports and
+	pollfd structures.
+	Patch by André Cruz.
+
 	[BZ #5545]
 	* sunrpc/clnt_perr.c (clnt_sperror): Don't use fixed size buffer.
 	(clnt_spcreateerror): Likewise.
